[package]
name = "dart6ul-gpio"
version = "0.1.2"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Library to allow controlling pins from linux userspace on the variscite dart6ul modules"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
